--- a/trekommend.ui/package.json
+++ b/trekommend.ui/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.3.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "firebase": "^8.1.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
