--- a/Trekommend/appsettings.json
+++ b/Trekommend/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Trekommend": "Server = localhost; Database = Trekommend; Trusted_Connection = True;"
+  },
   "AllowedHosts": "*"
 }
